// Protobuf 协议版本
syntax = "proto3";
// 加快解析
option optimize_for = SPEED;
// 生成单个文件
option java_multiple_files = false;
// 包路径
option java_package = 'top.simba1949.two';
// 生成的外部类名，同时也是文件名
option java_outer_classname = 'MyDataInfo';

// protobuf 可以使用 message 管理其他的 message
message MyMessage {
  // 定义一个枚举
  enum DataType{
    // 在 protobuf3 要求 enum 的编号从0开始
    StudentType = 0;
    WorkerType = 1;
  }

  // 用data_type 来表示穿的是哪个一个枚举
  DataType data_type = 1;
  // 表示每次枚举类型最多只能出现其中的一个，节省空间
  oneof dataBody {
    Student student = 2;
    Worker worker = 3;
  }
}

// protobuf 使用 message 管理数据
// 会在 StudentPOJO 外部类生成一个内部类 Student，是真正发送的 POJO 对象
message Student {
  // Student 类中有一个属性，属性名为id，类型为 int32（Protobuf的类型），1表示属性序号，而不是值
  int32 id = 1;
  string name = 2;
}

message Worker{
  string name = 1;
  int32 age = 2;
}